--- a/src/options_custom/index.html
+++ b/src/options_custom/index.html
@@ -17,8 +17,22 @@
         <tr>
             <td>
                 <form>
-                    <input id="address" required='' type='text'>
+                    <input id="account" required='' type='text'>
                     <label alt='Ripple Address' placeholder="Be sure your address start with 'r'"></label>
+                </form>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <hr>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <form>
+                    <input  id="connect" required='' type='checkbox'>
+                    <label for="connect">Listen For Incoming Transaction</label>
+                    <h6 style="color: grey">Active this if you wanna extension connect to ripple network and listen to new transactions</h6>
                 </form>
             </td>
         </tr>
@@ -29,6 +43,7 @@
         </tr>
     </table>
 </div>
+<div style="text-align:center"><h5>Powered BY XRP Army</h5></div>
 <script src="./js/base.js"></script>
 </body>
 </html>
