--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -17,11 +17,12 @@
         </span>
 
         <span class="account">
-            Account : <span id="address">Not Set ....</span>
+            Account : <span id="account">Not Set ....</span>
         </span>
 
     </div>
 </div>
 <script src="/js/app.js"></script>
+<script src="/js/ripple.js"></script>
 </body>
 <html>
